--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=2687d6d9728175d6fe39a2490cd8ab12
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+  MAILER_DSN=gmail://kevin.ferracci@gmail.com:iexkkzzoraugvfic@default?verify_peer=0
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -32,3 +32,8 @@ APP_SECRET=2687d6d9728175d6fe39a2490cd8ab12
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/dreamtravel?serverVersion=mariadb-10.4.11"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
