--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,9 @@ security:
             provider: app_user_provider
             logout:
                 path:   app_logout
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
                 # where to redirect after logout
                 # target: app_any_route
 
