Add globals variables

--- a/.env
+++ b/.env
@@ -37,3 +37,11 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/dreamtravel?serverVersion=mariadb
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+#API_KEY_UNSPLASH="1_M8oDW-2BC1jPmpZGhIFAF4QwLoIYEuf2l_bzB3EDw"
+API_KEY_UNSPLASH="BCXFUSjrXKrqgpLKLj6gN36cBB5qZ91T3lzsnrWQthI"
+
+API_KEY_WEATHER="96384413baa44ebc914222637201106"
+
+#translate (à modifier tous les deux mois)
+API_KEY_TRANSLATE="AIzaSyD_6nS65YbRMP7w3EtARAfjho8DfiYBReA"
