--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,18 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/city/(list|random), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/city/(\d+), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        - { path: ^/user/(\d+)/(edit), roles: ROLE_USER }
+        - { path: ^/user/(\d+), roles: ROLE_USER }
+
+        - { path: ^/admin/, roles: ROLE_ADMIN }
+        - { path: ^/(city|review|picture|user)/new, roles: ROLE_ADMIN }
+        - { path: ^/(city|review|picture)/(\d+)/(edit|delete), roles: ROLE_ADMIN }
+        - { path: ^/(review|city|badge|tag), roles: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_ADMIN
+        ROLE_USER: ROLE_USER
